UC3_Parte03_Mondragon

--- a/miapp/templates/index.html
+++ b/miapp/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Unidad de Capacidad 3</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,14 +52,14 @@
         <img src="https://intranet.untels.edu.pe/tramitevirtual/Content/images/untels-logoNuevoGrande.png" alt="Descripcióndelaimagen">
         <nav>
             <a href="cursos/">Inicio</a>
-            <a href="#">Enlace 2</a>
+            <a href="primos/">Primos</a>
             <a href="#">Enlace 3</a>
         </nav>
     </header>
 
     <!-- contenido -->
     <footer>
-        UNTELS - LP3 - Marcani Diaz, Terry Anthony - 20/11/2023
+        UNTELS - LP3 - Isla - Marcani - Mondragon - Muñoz - 20/11/2023
     </footer>
 </body>
 </html>
