UC3_Parte04_ISLA

--- a/miapp/templates/cursos.html
+++ b/miapp/templates/cursos.html
@@ -53,7 +53,7 @@
         <nav>
             <a href="cursos/">Inicio</a>
             <a href="primos/">Primos</a>
-            <a href="#">Enlace 3</a>
+            <a href="examen/">Examen</a>
         </nav>
     </header>
     <body>
